# java-legacyshop

./: .gitignore  BEHAVIORAL_PARITY_REPORT.md  CORESTORY_USAGE_LOG.md  LegacyShop-API.postman_collection.json  README.md  TEST_RESULTS.md  corestory-usage-log.md  curl-examples.sh  mvnw  pom.xml  test_behavioral.py  test_integration.py
fastapi_legacyshop/: .env.example  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  test.db
fastapi_legacyshop/alembic/: env.py
fastapi_legacyshop/alembic/versions/: 0001_initial.py
fastapi_legacyshop/app/: config.py  database.py  main.py  scheduler.py
fastapi_legacyshop/app/db/: base.py  seed.py  session.py
fastapi_legacyshop/app/models/: __init__.py  audit_log.py  customer.py  idempotency.py  order.py  order_item.py  payment.py  product.py
fastapi_legacyshop/app/repositories/: idempotency_repository.py  order_repository.py  product_repository.py
fastapi_legacyshop/app/routers/: admin.py  dev_inject.py  mock_payment.py  orders.py  products.py  reports.py
fastapi_legacyshop/app/schemas/: order.py  payment.py  product.py  report.py
fastapi_legacyshop/app/services/: discount_service.py  inventory_service.py  loyalty_service.py  order_service.py  payment_service.py  product_service.py  report_service.py
fastapi_legacyshop/app/tasks/: scheduler.py
fastapi_legacyshop/app/utils/: idempotency.py  money.py  problem_details.py
fastapi_legacyshop/docs/: mapping.md
fastapi_legacyshop/fastapi_legacyshop/: README.md  legacyshop.db  test.db
fastapi_legacyshop/scripts/: curl-examples.sh
fastapi_legacyshop/tests/: conftest.py  test_orders.py  test_payment.py  test_payment_service.py  test_products.py  test_reports.py
python-fastapi-rewrite/order-management-api/: README.md  pyproject.toml
(+116 files in other folders)
